feat: update scripts